agregue carpetas con imagenes y solucione lo de proxima fecha

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div> 
     <div class="seccion02" id="seccion02">  
         <div class="select">     
-            <select name="select" class="select-container" id="filtroMes" onchange="filtrarPorMes()">
+            <select name="select" class="select-container" id="filtroMes">
                 <option value="8" >Agosto</option>
                 <option value="9" >Septiembre</option>
                 <option value="10">Octubre</option>
